add logging, bug fixes